# money-making-machine

./: main.py  money.py  pyproject.toml  requirements.txt
